tests/fixtures/invalid/arrow_faltante.syn
#lang: es

funcion mal() nulo:
    retornar
